2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* logger.man:   Brought the version numbers back into sync
	* pkgIndex.tcl: with 'logger.tcl'

2004-02-13  David N. Welton  <davidw@dedasys.com>

	* logger.test: Added tests from Schlenker regarding new commands.

	* logger.tcl (logproc): Better error message, bugfix for new code
	from Schlenker.

	* logger.man: Added documentation for new logger commands.

2004-01-19  David N. Welton  <davidw@dedasys.com>

	* logger.tcl (currentloglevel): Added proc from Michael Schlenker
	to get information about the current log level for a given
	service.
	(logproc): Make logproc optionally take a command as an argument.
	From Michael Schlenker.
	(::logger::levels): New proc - returns the available log levels.
	From Michael Schlenker.

2003-12-18  David N. Welton  <davidw@dedasys.com>

	* logger.man: Document changes to logger API.

2003-12-16  David N. Welton  <davidw@dedasys.com>

	* logger.test (2.1): Test deletion callbacks.
	(2.2): Test deletion callbacks.

	* logger.tcl: Bump logger version number because of API change.
	(::logger::walk): Do eval after walk on children.
	(delproc): New procedure to set a deletion-time callback that is
	called for each of the instance's children.  Thanks to Michael
	Schlenker for the suggestion [ 856280 ].

2003-11-25  Andreas Kupries  <andreask@activestate.com>

	* log.tcl (log::log): Added better handling of multiple lines in log message.
	  (log::logarray): New command to dump the contents of an array into the log.

2003-06-25  David N. Welton  <davidw@dedasys.com>

	* log.man: Fixed spelling bug (Supress -> Suppress), thanks to
	Aaron Faupell.

	* logger.man: Updated documentation example - destroy should have
	been delete.  Thanks to Aaron Faupell.

2003-05-20  David N. Welton  <davidw@dedasys.com>
